# portal-telemedicina-central-database

./: .gitignore  .gitmodules  .readthedocs.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYING  Makefile  README.md  bitbucket-pipelines.yml  cloudbuild-client.yaml  cloudbuild.yaml  cookiecutter.json  daemon.json  data_extraction_routine.py  docker-compose.yml  fhir.schema.json  package-lock.json  pyproject.toml  result.json
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  postCreateCommand.sh
.kube/django/: django.deployment.yaml  django.service.yaml  environment.yaml
.kube/docs/: deployment.yaml  service.yaml
.kube/hapifhir/: deployment.yaml  environment.yaml  service.yaml
backend/: Dockerfile.dev  Dockerfile.prod  pytest.ini  requirements-local.txt  requirements.txt
backend/config/: api_router.py  asgi.py  storage_backends.py  urls.py  wsgi.py
backend/config/settings/: base.py  local.py  pipeline_test.py  production.py
backend/customers/: apps.py  factories.py  models.py
backend/customers/api/: serializers.py  views.py
backend/customers/migrations/: 0001_initial.py  0002_historicalclient.py  0006_healthprofessional_customers_h_cns_num_522492_idx.py
backend/customers/tests/: test_customers_serializers.py  test_customers_views.py
backend/health/: urls.py
backend/integrations/fhir/: views.py
backend/patients/: geo_coder.py  helpers.py  models.py  rules.py
backend/patients/api/: serializers.py  views.py
backend/patients/migrations/: 0001_initial.py  0002_historicalpatient_patient.py  0003_auto_20240914_2238.py  0004_auto_20240914_2352.py  (+3 more)
backend/permissions_manager/: admin.py  apps.py  core.py  exceptions.py  factories.py  models.py
backend/scripts/: hook.sh  start  start_dev
backend/services/: cache_service.py
backend/templates/: base.html
backend/users/: admin.py  models.py
backend/utils/: base_models.py  conftest.py
backend/vaccines/: admin.py  models.py  translation.py
central_database/: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CONTRIBUTORS.txt  Dockerfile  LICENSE  README.md  hook.sh  local.yml  manage.py  merge_production_dotenvs_in_dotenv.py  package.json  production.yml  pytest.ini  setup.cfg  vaccine_status.json
central_database/central_database/: base_models.py  conftest.py
central_database/config/: api_router.py  asgi.py  consumers.py  gunicorn.conf.py  urls.py  wsgi.py
central_database/docs/: ERD.rst  __init__.py  conf.py  graph_models.sh  hapifhir.rst  howto.rst  index.rst  indicators.rst  installation_guide.rst  make.bat  openapi.yml  quality_assurance.rst  requirement.txt  requirements.in  requirements.txt  users.rst  vaccines.rst
central_database/fixtures/: alerts.json  status.json
central_database/requirements/: base.txt  local.txt
docs/: Makefile  export_docs.sh
docs/backend/: Dockerfile  conf.py  requirements.txt  testing.rst
docs/frontend/: Dockerfile  package.json
fhir_server/: Dockerfile  main.go
fhir_server/schema/: fhirbase-1.0.2.sql.json  fhirbase-1.1.0.sql.json  fhirbase-1.4.0.sql.json  fhirbase-1.6.0.sql.json  fhirbase-1.8.0.sql.json  fhirbase-3.0.1.sql.json  fhirbase-3.2.0.sql.json  fhirbase-3.3.0.sql.json  fhirbase-4.0.0.sql.json
fhir_server/transform/: fhirbase-import-1.0.2.json  fhirbase-import-1.1.0.json  fhirbase-import-1.4.0.json  fhirbase-import-1.6.0.json  fhirbase-import-1.8.0.json  fhirbase-import-3.0.1.json  fhirbase-import-3.2.0.json  fhirbase-import-3.3.0.json  fhirbase-import-4.0.0.json
frontend/: .env.development  .env.homolog  .eslintrc.js  .prettierignore  Dockerfile.dev  Dockerfile.prod  package-lock.json  package.json  vite.config.js
locust-load-testing/: apply_kubernetes.sh  build_locust_image.sh  create_artifact_repo.sh  locust_ui.sh
locust-load-testing/docker-image/: Dockerfile
locust-load-testing/kubernetes-config/: locust-master-controller.yaml.tpl  locust-master-service.yaml.tpl  locust-worker-controller.yaml.tpl
requirements/: dev.txt  dev_local.txt  homolog.txt
unicef-front/: .dockerignore  .env.development  .env.development.local.example  .env.example  .env.homolog  .env.master  .env.production  .prettierignore  .prettierrc  Dockerfile  Dockerfile.production  README.md  components.d.ts  cypress.config.js  index.html  my_server_block.conf  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.js
unicef-front/nginx/: nginx.conf
unicef-front/src/: i18n.js  main.js  tailwind.css
web/: index.html
(+401 files in other folders)
